crates/vm/tests/snapshots/object_load_named__field.snap
---
source: crates/vm/tests/object_load_named.rs
expression: snapshot
---
# Input:
v := { a: 10 }
print v.a


# Result (success):
none

# Stdout:
10

