crates/vm/tests/snapshots/object_load_named__nested_opt.snap
---
source: crates/vm/tests/object_load_named.rs
expression: snapshot
---
# Input:
v := { a: { b: 10 } }
print ?v.a.b


# Result (success):
none

# Stdout:
10

