crates/vm/tests/snapshots/object_load_named__unknown_opt.snap
---
source: crates/vm/tests/object_load_named.rs
expression: snapshot
---
# Input:
v := {}
print ?v.a


# Result (success):
none

# Stdout:
none

