crates/vm/tests/snapshots/object_load_named__unknown_opt_then_error.snap
---
source: crates/vm/tests/object_load_named.rs
expression: snapshot
---
# Input:
v := {}
print ?v.a
print v.a


# Result (error):
[31merror[0m in code: cannot get field `"a"` on value `{}`


# Stdout:
none

